--- a/minlogdpll.tex
+++ b/minlogdpll.tex
@@ -415,7 +415,7 @@ The theorem \texttt{DPLLSucces} is partitioned into several sub theorems or lemm
 
 
 \section{The Modified DPLL and  Resolution Proof Systems in Minlog}
-The DPLL and Resolution proof systems were modified in order to obtain a proof complexity result during the proof of equivalence between the two systems.
+The DPLL and Resolution proof systems were modified in order to obtain a proof complexity result during the proof of equivalence between the two systems. A natural numbered counter has been added to the inductive definition of resolution enabling us to measure the size of the proofs. This enables us to perform a comparison between the size of resolution proofs and DPLL proofs.
 
 
 \begin{lstlisting}
